--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,28 +1,38 @@
-{{!-- HEADER SPACE  --}}
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    {{!-- BOOTSTRAP CSS --}}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    {{!-- BOOTSTRAP JS --}}
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    {{!-- JQUERY  --}}
-    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-    {{!-- POPPER  --}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    {{!-- BOOTBOX  --}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.3.2/bootbox.js"></script>
-    {{!-- GOOGLE FONTS  --}}
-    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Nova+Square&display=swap" rel="stylesheet">
-    {{!-- CSS  --}}
-    <link rel="stylesheet" href="/assets/css/style.css">
-    {{!-- AXIOS  --}}
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.js"></script>
-
+    <!-- MATERIALIZE CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/css/materialize.min.css">
+    <!-- GOOGLE ICONS -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- CSS -->
+    {{!-- <link rel="stylesheet" type="text/css" href="/css/index.css"> --}}
+    <!-- MEDIA QUERIES CSS -->
+    {{!-- <link rel="stylesheet" type="text/css" href="/css/media.css"> --}}
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Playfair+Display&family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
+    <!-- FAVICON -->
+    {{!-- <link rel="icon" href="/images/favicon.png" type="image/png"> --}}
     <title>Real Simple Recipe Scrape</title>
 </head>
+
+<body>
+    
+    {{nav/navbar}}
+    <main>
+        <div class="container">
+            {{{ body }}}
+        </div>
+    </main>
+    {{footer}}
+
+    <!--Import jQuery before Materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    {{!-- Materialize.js  --}}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
+    <!-- javascript file --> 
+    {{!-- <script src="/public/app.js"></script> --}}
+</body>
+</html>
