--- a/views/nosavedrecipes.handlebars
+++ b/views/nosavedrecipes.handlebars
@@ -1,4 +1,4 @@
-{{!-- HEADER SPACE  --}}
+{{!-- HEADER SPACE 
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand subtitle" href="/">Recipe Scraper</a>
@@ -59,4 +59,4 @@
     function scrapeRecipes() {
         $.get("/scrape");
     }
-</script>
+</script> --}}
