--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,4 +1,4 @@
-{{!-- HEADER SPACE  --}}
+{{!-- HEADER SPACE 
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <a class="navbar-brand subtitle" href="/">Real Simple Recipe Scraper</a>
@@ -49,4 +49,4 @@
         </div>
     </div>
     {{/if}} {{/each}}
-</div>
+</div> --}}
