scraping to page & styled

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,60 +1,43 @@
-/* .jumbotron .background-image {
-    background-image: url("#");
-    background-size: cover;
-    height: 100%;
+/* Header space  */
+
+/* font-family: 'Abril Fatface', cursive; */
+/* font-family: 'Playfair Display', serif; */
+/* font-family: 'Raleway', sans-serif; */
+
+.main {
+    /* padding-top: 4vh; */
+    color: rgb(44, 44, 44);
+    padding-bottom: 2vh;
+    margin-bottom: 20vh;
+    overflow: hidden;
 }
 
-.jumbotron .overlay {
-position: absolute;
-top: 0;
-bottom: 0;
-right: 0;
-left: 0;
-z-index: 2;
-background-color: rgba(0, 0, 0, 0.7);
+.straws {
+    height: relative;
+    width: relative;
 }
 
-.jumbotron {
-    padding: 0;
-    height:250px;
-    position: relative;
-    width: 100%;
-}
-
-.jumbotron .caption {
-    position: absolute;
-    top: 20%;
-    width: 100%;
-    text-align: center;
-    z-index: 3;
-}
-
-.jumbotron .caption h1 {
-    color: white;
-}
-
-.jumbotron .caption p {
-    color: white;
-}
-
-.my-btn {
-    margin-right: .5rem; 
-}
-
-.save-btn {
-    display: inline-block;
+.header {
+    height: relative;
+    width: 101%;
+    background-color: #fff8fb;
 }
 
 .title {
-    font-family: 'Black Ops One', cursive;
-    font-size: 3rem;
+    font-family: 'Playfair Display', serif;
+    color: darkslategray;
 }
 
-.subtitle {
-    font-family: 'Nova Square', cursive;
-    font-size: 1.5rem;
+button {
+    font-family: 'Playfair Display', serif;
+    background-color: #8eab3e !important;
+    border: .5px solid lightgrey;
 }
 
-textarea {
-    width: 100%;
-} */
+button:hover {
+    background-color: #ab4c3e !important;
+}
+
+button:active {
+    font-size: .85rem;
+}
