--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -1,4 +1,4 @@
-{{!-- Header space  --}}
+{{!-- Header space 
 
 <div class="row">
     <h3 class="card">{{title}}</h3>
@@ -43,4 +43,4 @@
         <p>No comments yet.</p>
         {{/if}}
     </div>
-</div>
+</div> --}}
