--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
     <!-- GOOGLE ICONS -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- CSS -->
-    {{!-- <link rel="stylesheet" type="text/css" href="/css/index.css"> --}}
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
     <!-- MEDIA QUERIES CSS -->
     {{!-- <link rel="stylesheet" type="text/css" href="/css/media.css"> --}}
     <!-- GOOGLE FONTS -->
@@ -19,20 +19,22 @@
 </head>
 
 <body>
+    <div class="container main z-depth-4 center-align">
     
-    {{nav/navbar}}
+    {{!-- {{nav/navbar}}
     <main>
-        <div class="container">
+        <div class="container"> --}}
             {{{ body }}}
-        </div>
-    </main>
-    {{footer}}
+        {{!-- </div>
+    </main> --}}
+    {{!-- {{footer}} --}}
+    </div>
 
     <!--Import jQuery before Materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     {{!-- Materialize.js  --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
     <!-- javascript file --> 
-    {{!-- <script src="/public/app.js"></script> --}}
+    <script src="/app.js"></script>
 </body>
 </html>
