--- a/views/partials/nav/navbar.handlebars
+++ b/views/partials/nav/navbar.handlebars
@@ -1,4 +1,4 @@
-{{!-- Header space  --}}
+{{!-- Header space 
 
 <nav>
     <div class="nav-wrapper topnav">
@@ -8,4 +8,4 @@
             <li><a href="https://github.com/jenkruk/scraper" target="_blank">Github Repo</a></li>
         </ul>
     </div>
-</nav>
+</nav> --}}
