json now appends to saved page

--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -9,7 +9,7 @@
 
 <div class="row center-align">
  <button class="btn z-depth-1" id="scraped">SCRAPED!</button>
-<a class="btn z-depth-1" type="button" href="/savedRecipes/" id="saved">View Saved Recipes</a>
+<a class="btn z-depth-1" type="button" href="/saved/" id="saved">View Saved Recipes</a>
   <div class="clearfix"></div>
 <h6 class="col s12 propertyOf row"> All recipes property of
     <a href="https://www.realsimple.com/food-recipes/browse-all-recipes" target="_blank" class="center-align rsLink"> 
