--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,7 +17,7 @@
 
 .header {
     height: relative;
-    width: 101%;
+    width: 102%;
     background-color: #fff8fb;
 }
 
@@ -56,6 +56,7 @@
 
 #saved {
     background-color: #ab3e57;
+    cursor: default;
 }
 
 .propertyOf {
@@ -67,10 +68,54 @@
     color: #913eab;
 }
 
-#saveRecipe {
+.saveRecipe {
     margin: 0 !important;
+    cursor: pointer;
+}
+
+#recipeSaved {
+    color: #8EAB3E;
+}
+
+.recipeSaved {
+    margin-top: -.5vh;
+}
+
+#viewSaved {
+    background-color: #ab3e57;
+    cursor: pointer;
 }
 
 #home {
+    background-color: #8eab3e;
+}
+
+#viewBtn {
+    background-color: #ab3e57;
+    color: white;
+    /* padding: 0 1vw 0 1vw; */
+    margin: 0 !important;
+}
+
+#notes {
+    background-color: #8eab3e;
+    color: white;
+    /* padding: 0 1vw 0 1vw; */
+    /* border: 1px solid lightgrey; */
+}
+
+#removeBtn {
+    background-color: #ab3e57;
+    color: white;
+    /* padding: 0 1vw 0 1vw; */
+    margin-left: 1vw;
+    /* border: 1px solid lightgrey; */
+}
+
+.modal {
+    width: 50% !important;
+}
+
+#saveNote {
     background-color: #8eab3e;
 }
