--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -39,8 +39,7 @@
           data-target="noteModal{{this._id}}" id="notes">Recipe Notes</button>
         </div>
         <div class="card-bottom center-align">
-          <button class="savedActions btn z-depth-1" data-id={{this._id}} 
-          id="removeBtn">Unsave this Recipe</button>
+          <button class="savedActions btn z-depth-1 removeBtn" data-id={{this._id}}>Unsave this Recipe</button>
         </div>
       </div>
     </div>
