--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -39,7 +39,7 @@
               Save Recipe
             </a>
             <p class="recipeSaved" id="recipeSaved">RECIPE SAVED!</p>
-            <a class="recipeSaved z-depth-1 btn" id="viewBtn" href="/saved/">View Saved</a>
+            <a class="recipeSaved z-depth-1 btn" id="viewSavedBtn" href="/saved/">View Saved</a>
         </div>
       </div>
     </div>
