--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Playfair+Display&family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
     <!-- FAVICON -->
-    {{!-- <link rel="icon" href="/images/favicon.png" type="image/png"> --}}
+    <link rel="icon" href="/assets/images/fav.png" type="image/png">
     <title> Real Simple Recipe Scrape </title>
 </head>
 
