--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Playfair+Display&family=Playfair+Display&family=Raleway&display=swap" rel="stylesheet">
     <!-- FAVICON -->
     <link rel="icon" href="/assets/images/fav.png" type="image/png">
-    <title> Real Simple Recipe Scrape </title>
+    <title> Real Simple Recipe Scraper </title>
 </head>
 
 <body>
