--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -2,7 +2,7 @@
 
 <div class="col s12 row z-depth-3 header center-align valign-wrapper">
   <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F23%2F2020%2F05%2F21%2Fstrawberry-season-2000.jpg" alt="strawberryHeader" class="straws col s8">
-  <h3 class="center-align title">Real Simple Recipe Scrape</h3>
+  <h3 class="center-align title">Real Simple Recipe Scraper</h3>
 </div>
 
 <br><br>
