--- a/views/recipes.handlebars
+++ b/views/recipes.handlebars
@@ -28,7 +28,7 @@
       </div>
       <div class="card-stacked col s4">
         <div class="card-content valign-wrapper">
-          <h5 class="title" data-title="{{title}}">{{title}}</h5>
+          <h5 class="eachTitle" data-title="{{title}}">{{title}}</h5>
         </div>
         <div class="row">
             <a href="{{link}}" data-link="{{link}}" class="link" target = "_blank">GO TO RECIPE</a>
@@ -36,7 +36,7 @@
         <div class="card-action center-align">
             <a class="saveRecipe">
               <i class="tiny material-icons">favorite_border</i>
-              Save Recipe
+              Save
             </a>
             <p class="recipeSaved" id="recipeSaved">RECIPE SAVED!</p>
             <a class="recipeSaved z-depth-1 btn" id="viewSavedBtn" href="/saved/">View Saved</a>
