--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -29,7 +29,7 @@
       </div>
       <div class="card-stacked col s4">
         <div class="card-content valign-wrapper">
-          <h5>{{title}}</h5>
+          <h5 class="eachTitle">{{title}}</h5>
         </div>
         <div class="row">
           <a href="{{link}}" target = "_blank">GO TO RECIPE</a>
