--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -46,7 +46,7 @@
     {{else}}
       <div class="panel panel-default">
         <div class="panel-body">
-          <h5 class="sad">Well this is sad... you have no saved articles.</h5>
+          <h5 class="sad">Well this is sad... you have no saved recipes.</h5>
           </div>
           <div>
           <h6>Let's head &nbsp <a class="btn z-depth-1 home" type="button" href="/recipes">Back to Recipes</a> &nbsp to start saving!</h6>
@@ -64,7 +64,7 @@
           </div>
         </form>
         <div class="modal-footer">
-            <button type="button" class="btn" id= "saveNote" data-recipeID=0>Save Note</button>
+            <button type="button" class="btn" id="saveNote" data-recipeID=0>Save Note</button>
         </div>
     </div>
 </div>
